證券交易法 1988.1.12

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -10,13 +10,19 @@
 
 * 5 本法所稱發行人，謂募集及發行有價證券之公司，或募集有價證券之發起人。
 
-* 6 本法所稱有價證券，謂政府債券及依本法公開募集、發行之公司股票、公司債券及經政府核准之其他有價證券。新股認購權利證書，及前項各種證券之價款繳納憑證，視為有價證券。
+* 6 本法所稱有價證券，謂政府債券及公開募集、發行之公司股票、公司債券及經財政部核定之其他有價證券。新股認購權利證書、新股權利證書及前項各種有價證券之價款繳納憑證或表明其權利之證書，視為有價證券。
 
-* 7 本法所稱募集，謂發起人於公司成立前或發行公司於發行前，對非特定人以同一之條件，公開招募股份或公司債之行為。
+> 釋：一、現行第一項所定依本法公開募集、發行之公司股票、公司債券，始為本法之有價證券，易滋誤解不依本法亦可公開募集、發行該二有價證券之疑義，爰將第一項中之「依本法」三字刪除，並將本項後段「政府核准之其他有價證券」修正為「財政部核定之其他有價證券」，俾期明確。二、公開發行股票公司依公司法第二百四十條及第二百四十一條增資發行新股，因係按原有股東配發新股，實務上得在增資股票上市買賣前，先行印製新股權利證書，於報經主管機關核准上市買賣，又表彰第一項各種有價證券之權利證書，參照外國立法例，均列為有價證券之範疇，爰增列「新股權利證書」，及其他有價證券之表彰權利證書，俾資周全。
+
+* 7 本法所稱募集，謂發起人於公司成立前或發行公司於發行前，對非特定人公開招募股份或公司債之行為。
+
+> 釋：依公司法第一百五十六條第六項：「同次發行之股份，其發行條件相同者，價格應歸一律。」並未限制不得以「非同一之條件」發行，本條現行規定限制「以同一之條件」，則發行人如以「非同一之條件」發行，即非屬本法之募集，而可規避本法之管理。該要件之列入，顯屬多餘且不妥，爰予刪除。
 
 * 8 本法所稱發行，謂發行人於募集後製作並交付有價證券之行為。
 
-* 9 本法所稱買賣，謂在證券交易所集中交易市場，以競價方式買賣，或在證券商營業處所買賣有價證券之行為。
+* 9 （刪除）
+
+> 釋：一、上市有價證券依第一百五十條規定，除在集中交易市場競價買賣外，如符合該條所列三款要件者，亦得於場外交易；又有價證券申請在證券商營業處所買賣，本法並無強制必須在各證券商營業處所買賣。則對已上市或在證券商營業處所買賣之有價證券，如不在集中交易市場或證券商營業處所買賣，而有虛偽、詐欺或其他足致他人誤信之情事時，因本條對買賣之界定，善意之受害人，即無法適用第二十條對為虛偽．．．．之行為者，請求賠償，顯不合理。二、復依增訂之修正條文第二十二條之二第一項第一款及第三款規定，已依本法發行股票公司之董事、監察人、經理人或持有公司股份超過股份總額百分之十之股東，亦得向主管機關申報後，逕行對非特定人或洽特定人轉讓股份。該等轉讓行為依本條現行規定，亦有如同上項不能適用本法有關規定之相同情形。三、按買賣之定義及效力，民法已有專節規定，為使凡經核准在集中交易市場或證券商營業處所買賣之有價證券，其轉讓不論是否在該二場所交易，均能一體適用本法有關條文之規定，以維護投資人權益，本條爰予以刪除。
 
 * 10 本法所稱承銷，謂依約定包銷或代銷發行人發行有價證券之行為。
 
@@ -32,15 +38,17 @@
 
 * 16 經營前條各款業務之一者為證券商，並依左列各款定其種類：一、經營前條第一款規定之業務者，為證券承銷商。二、經營前條第二款規定之業務者，為證券自營商。三、經營前條第三款規定之業務者，為證券經紀商。
 
-* 17 公司依本法公開募集及發行有價證券時，應先向主管機關申請核准。公司須由具有特定資格之股東所組成，或其事業之範圍或性質不適宜由公眾投資者，得經財政部核定，不適用本法及公司法關於公開發行之規定。
+* 17 公司依本法公開募集及發行有價證券時，應先向主管機關申請核准或申報生效。公司須由具有特定資格之股東所組成，或其事業之範圍或性質不適宜由公眾投資者，得經財政部之核定，不適用本法及公司法關於公開發行之規定。
 
-> 釋：一、第一項未修正。二、刪除「得經經濟部之核定」等文字以使財政部逕依職權核定，而強化其權限。
+> 釋：一、修正條文第二十二條第一項對於有價證券之募集及發行，已修正兼採審核與申報生效制度，並授權主管機關訂定其處理準則，爰於第一項末句增列「或申報生效」，以資配合。二、第二項未修正。
 
-* 18 經營證券投資信託事業、證券金融事業或證券投資顧問事業，應經主管機關之核准；其有關管理、監督事項，由行政院以命令定之。
+* 18 經營證券投資信託事業、證券金融事業、證券投資顧問事業、證券集中保管事業或其他證券服務事業，應經主管機關之核准。前項事業之管理、監督事項，由行政院以命令定之。
 
-* 18.1 第三十八條、第三十九條及第六十六條之規定，於前條之事業準用之。
+> 釋：為增加證券交易之安全及加強投資服務，暨參照美、日等國證券市場已個別設置有清算、資訊、店頭市場相互公司等證券服務事業，爰於本條前段增列「證券集中保管事業或其他證券服務事業」等文字，列為第一項，俾設置專責之集中保管事業，辦理證券集中保管及劃撥業務，以及配合市場之發展，於需要時，得設置其他證券服務事業。
 
-> 釋：一、本條新增。二、為加強前條所定證券投資信託事業，證券金融事業及證券投資顧問事業之管理，本法第三十八條、第三十九條及第六十六條之規定，於各該事業有準用之必要，爰予明定，俾資依據。
+* 18.1 第三十八條、第三十九條及第六十六條之規定，於前條之事業準用之。第五十三條、第五十四條及第五十六條之規定，於前條事業之人員準用之。
+
+> 釋：一、第一項不修正。二、第二項新增。本條現行所列準用條文，僅限於對事業本身之管理，而對事業所屬相當於第五十三條、第五十四條及第五十六條所定人員，其資格條件與管理尚付闕如，爰增訂第二項，明定第五十三條、第五十四條及第五十六條之規定，於前條事業之人員準用之。
 
 * 18.2 證券投資信託事業募集之證券投資信託基金，與證券投資信託事業及基金保管機構之自有財產，應分別獨立。證券投資信託事業及基金保管機構就其自有財產所負債務，其債權人不得對於基金資產請求扣押或行使其他權利。證券投資信託基金管理辦法，由財政部定之。
 
@@ -48,23 +56,47 @@
 
 * 19 凡依本法所訂立之契約，均應以書面為之。
 
-* 20 募集、發行或買賣有價證券者，不得有虛偽、詐欺或其他足致他人誤信之行為。違反前項規定者，對於該有價證券之善意取得人因而所受之損害，應負賠償之責。
+* 20 有價證券之募集、發行或買賣，不得有虛偽、詐欺或其他足致他人誤信之行為。發行人申報或公告之財務報告及其他有關業務文件，其內容不得有虛偽或隱匿之情事。違反前二項規定者，對於該有價證券之善意取得人或出賣人因而所受之損害，應負賠償之責。委託證券經紀商以行紀名義買入或賣出之人，視為前項之取得人或出賣人。
+
+> 釋：一、有價證券之募集、發行或買賣行為，係屬相對，當事人雙方均有可能因受對方或第三人之虛偽、詐欺或其他足致他人誤信之行為而遭受損失。本條第一項現行規定文義僅限於「募集、發行或買賣有價證券者」不得有虛偽、詐欺或其他足致他人誤信之行為，未包括「第三人」顯欠周密，爰將「募集、發行或買賣有價證券者」等文字，修正為「有價證券之募集、發行或買賣」，俾資涵蓋第三人。二、第二項新增。對發行人應編送主管機關之財務報告或其他有關業務文件，有虛偽之記載情事者，依第一百七十四條僅規定刑事責任，對善意之有價證券取得人或出買人並無實益，爰增訂第二項。三、現行第二項改為第三項。四、第四項新增。依本法第十五條及第十六條證券經紀商受託買賣有價證券可以「行紀」與「居間」方式為之，其以「行紀」受託買賣者（證券集中交易市場屬之），買賣直接當事人為證券經紀商，並非委託人，若買賣有虛偽、詐欺等情事而符合本條之要件時，委託人欲提出賠償之訴，並不能逕行向侵權行為人請求，而須透過受託證券經紀商輾轉向侵權行為人請求，致權利之行使程序，顯過於繁雜，爰增訂第四項。
 
 * 21 本法規定之損害賠償請求權，自有請求權人知有得受賠償之原因時起二年間不行使而消滅；自募集、發行或買賣之日起逾五年者亦同。
 
-* 22 有價證券之募集與發行，除政府債券或經政府核准之其他有價證券外，非經主管機關依公司法及本法核准，不得為之；其審核標準，由主管機關另定並公告之。已依本法發行股票之公司，於發行新股時，依公司法之規定可不公開發行者，仍應依前項之規定，先經主管機關核准。
+* 22 有價證券之募集與發行，除政府債券或經財政部核定之其他有價證券外，非經主管機關核准或向主管機關申報生效後，不得為之；其處理準則由主管機關定之。已依本法發行股票之公司，於依公司法之規定，發行新股而可不公開發行者，仍應依前項之規定辦理。第一項規定於出售所持有之公司股票、公司債券或其價款繳納憑證、表明其權利之證書或新股認購權利證書、新股權利證書，而對非特定人公開招募者，準用之。
+
+> 釋：一、證券市場已建立二十五年，公開發行公司與市場交易量質隨著國家經濟成長而逐日增加，對於善意之有價證券取得人或出賣人因而所受之損害，應負賠償之責等改進措施，對部分得簡化審核程序之募集與發行，可採行美、日等國申報生效制，以增進募集與發行之時效，爰將現行審核制，修正兼採審核與申報制。二、第二項酌作文字修正。三、第三項新增。目前實務上發生甚多將所持有之公司股票、公司債券或其價款繳納憑證、表彰其權利之證書或新股認購權利證書、新股權利證書，對非特定人公開招募以出售該等證券之情形，因其既非現行第七條、第八條所稱之募集或發行，致無從依本法有關規定加以有效之管理，以該等行為係向非特定人公開招募，影響層面甚廣，為維護公益及保障投資人利益計，爰參考美、日立法例（美國證券交易法第三條第一項第八款、日本證券交易法第二條第五款、第二十七條），增訂本項。
+
+* 22.1 已依本法發行股票之公司，於增資發行新股時，主管機關得規定其股權分散標準。公開發行股票公司股務處理準則，由主管機關定之。
+
+> 釋：一、本條新增。二、六十九年五月九日修正之公司法第一百五十六條，自實施以來，公司雖將財務公開，但對績優之公司未能促使股權分散，投資大眾無法參與投資，對原增訂意旨之「便利投資，以期達到資本大眾化目標」並無績效，爰增訂第一項。三、投資人與公司間之基本法律關係為股權之行使，惟對股務之管理，本法及有關法令（如公司法）等均未規定，目前係由主管機關訂定「發行公司股務處理準則」資為股務作業之準據，為全法據，爰增訂第二項。
+
+* 22.2 已依本法發行股票公司之董事、監察人、經理人或持有公司股份超過股份總額百分之十之股東，其股票之轉讓，應依左列方式之一為之：一、經主管機關核准或自申報主管機關生效日後，向非特定人為之。二、依主管機關所定持有期間及每一交易日得轉讓數量比例，於向主管機關申報之日起三日後，在集中交易市場或證券商營業處所為之。但每一交易日轉讓股數未超過一萬股者，免予申報。三、於向主管機關申報之日起三日內，向符合主管機關所定條件之特定人為之。經由前項第三款受讓之股票，受讓人在一年內欲轉讓其股票，仍須依前項各款所列方式之一為之。第一項之人持有之股票，包括其配偶、未成年子女及利用他人名義持有者。
+
+> 釋：一、本條新增。二、目前證券交易中最為人所詬病者，不外發行公司董事、監察人或大股東參與股票之買賣，與藉上市轉讓股權，不但影響公司經營，損害投資人權益，並破壞市場穩定，為健全證券市場發展，維持市場秩序，對發行公司董事、監察人、經理人及持有公司股份超過股份總額百分之十之股東股票之轉讓，有必要嚴加管理，於第一項分三款規定各該人員欲轉讓股票之方式。三、為防止第一項第三款之特定受讓人於受讓股票後再行轉讓，發生相同流弊，參照公司法第一百六十三條第二項所定發起人之股份非於公司設立登記一年後，不得轉讓之立法例，於第二項規定，經由第一項第三款受讓之股票，受讓人在一年內欲轉讓時，仍須依第一項所列三款之一方式為之。四、為防第一項股票持有人，藉配偶、未成年子女或他人名義持有股票，規避本條之限制，於第三項明定包括之。至所稱「利用他人名義持有者」不外乎基於資金來源、控制關係、利益或損失之歸屬等情節，擬於本法施行細則明定。
 
 * 23 新股認購權利證書之轉讓，應於原股東認購新股限期前為之。
 
 * 24 公司依本法發行新股者，其以前未依本法發行之股份，視為已依本法發行。
 
-* 25 公開發行股票之公司於登記後，應即將其董事、監察人、經理人及持有股份達股份總額百分之五以上之股東，所持有之本公司股票種類、股數及票面金額，向主管機關申報並公告之。公司應於每月十五日以前，彙將前項股票持有人上月份股數變動之情形，向主管機關申報，必要時主管機關得命令其公告之。第一項之股票經設定質權者，出質人應即通知公司；公司應於其質權設定後五日內，將其出質情形，向主管機關申報並公告之。
+* 25 公開發行股票之公司於登記後，應即將其董事、監察人、經理人及持有股份超過股份總額百分之十之股東，所持有之本公司股票種類、股數及票面金額，向主管機關申報並公告之。前項股票持有人，應於每月五日以前將上月份持有股數變動之情形，向公司申報；公司應於每月十五日以前，彙總向主管機關申報，必要時主管機關得命令其公告之。第二十二條之二第三項之規定，於計算前二項持有股數準用之。第一項之股票經設定質權者，出質人應即通知公司；公司應於其質權設定後五日內，將其出質情形，向主管機關申報並公告之。
+
+> 釋：一、配合第二十二條之二之增訂，將第一項大股東持有股份總額，由「達股份總額百分之五以上」修正為「超過股份總額百分之十」。二、對董事、監察人、經理人、大股東等股權變動情形之申報，現行第二項僅規定由公司辦理，惟當事人買賣公司股票，若未向公司申報，公司並不知情（目前股票交易未實施過戶交易），不無影響股權申報之績效，爰予以修正，增列第一項所定股票持有人應於每月五日以前向公司申報股權變動情形。三、增訂第三項，規定第二十二條之二第三項所定董事等持有之股票，包括其配偶、未成年子女及利用他人名義持有者，於計算本條第一項、第二項持有股數準用之。四、現行第三項移列第四項。
 
 * 25.1 公開發行股票公司出席股東會使用委託書應予限制、取締或管理；其規則由主管機關定之。使用委託書違反前項所定規則者，其代理之表決權不予計算。
 
 > 釋：一、本條新增。二、授權主管機關訂定公開發行公司出席股東會使用委託書管理規則，就委託代理加以限制及管理，以防少數股東借徵求委託書而操縱股東會，爰增訂本條以為法律依據。
 
-* 26 凡依本法公開募集及發行有價證券之公司，其章程應分別訂明全體董事及監察人二者所持有記名股票之股份總額，各不得少於公司股份總額一定之成數。前項成數，由主管機關以命令定之。
+* 26 凡依本法公開募集及發行有價證券之公司，其全體董事及監察人二者所持有記名股票之股份總額，各不得少於公司已發行股份總額一定之成數。前項董事、監察人股權成數及查核實施規則，由主管機關以命令定之。
+
+> 釋：一、第一項現行規定全體董事及監察人二者所持記名股票之股份總額各不得少於公司股份總額一定之成數，須訂明於公司章程。致主管機關於調整該項成數時，部分發行公司即以章程未修正，不便通知補足，影響主管機關管理之時效，爰刪除「章程應分別訂明」等字；又依公司法第一百五十六條第二項，公司股份得分次發行，爰將「股份總額」修正為「已發行股份總額」。二、第二項酌作文字修正。
+
+* 26.1 已依本法發行有價證券之公司召集股東會時，關於公司法第二百零九條第一項、第二百四十條第一項及第二百四十一條第一項之決議事項，應在召集事由中列舉並說明其主要內容，不得以臨時動議提出。
+
+> 釋：一、本條新增。二、公司法第二百零九條第二項、第二百四十條第一項及第二百四十一條第一項所定應經股東會議之事項，皆屬公司經營之重大事項，為防止公司取巧以臨時動議提出，影響股東權益，爰增訂本條。
+
+* 26.2 已依本法發行股票之公司，對於持有記名股票未滿一千股股東，其股東常會之召集通知得於開會三十日前；股東臨時會之召集通知得於開會十五日前，以公告方式為之。
+
+> 釋：一、本條新增。二、目前各公開發行公司之股票，已依主管機關所訂定「公開發行股票統一規格要點」換發統一規格股票，每股金額並均為新臺幣壹拾元。復依本法第一百三十八條授權，證券交易所對於上市股票之買賣，係以每股金額十元一千股為一成交單位或其倍數，不足一成交單位者為零股交易。股票公開發行公司因歷年不斷增資配股，致使持有零股股東人數眾多，幾達各該公司股東總人數百分之四十以上，但其總持股數僅為各該公司發行股數百分之一以下，所占比例甚微。實務上公司必須將開會通知書以掛號寄發各股東（便於取證），對於已成為大眾化之股票發行公司造成人力、物力一大負荷，迭經各股票發行公司反應，爰增訂本條。
 
 * 27 主管機關對於公開發行之股票，得規定其每股之最低或最高金額。但規定前已准發行者，得仍照原金額，其增資發行之新股亦同。公司更改其每股金額，每年度以一次為限。
 
@@ -72,21 +104,31 @@
 
 > 釋：一、配合本法第十七條條文之修正，酌作文字修正。二、第二項未修正。
 
+* 28.1 股票未在證券交易所上市或未於證券商營業處所買賣之公開發行股票公司，其股權分散未達主管機關依第二十二條之一第一項所定標準者，於現金發行新股時，除主管機關認為無須或不適宜對外公開發行者外，應提撥發行新股總額之一定比率，對外公開發行，不受公司法第二百六十七條第一項關於原股東儘先分認規定之限制。股票已在證券交易所上市或於證券商營業處所買賣之公開發行股票公司，於現金發行新股時，主管機關得規定提撥發行新股總額之一定比率，以時價向外公開發行，不受公司法第二百六十七條第一項關於原股東儘先分認規定之限制。前二項提撥比率定為發行新股總額之百分之十。但股東會另有較高比率之決議者，從其決議。依第一項或第二項規定提撥向外公開發行時，同次發行由公司員、工承購或原有股東認購之價格，應與向外公開發行之價格相同。
+
+> 釋：一、本條新增。二、公開發行公司透過市場吸收資金，以促使資本證券化，證券大眾化，為建立證券市場主要目的之一。惟因公司法第二百六十七條第一項規定，公司於發行新股時，應由原股東優先分認，致有左列缺陷：（一）公司董、監事如認購增資股資力不足時，不無影響公司辦理增資在市場吸收資金意願。（二）如仍由原股東優先分認，股權無法更加分散予社會大眾，與證券大眾化目標不符。（三）對績優公司、因顧及股東資力及維護股東權益，未便以超過面額發行新股，增加公司營運資金，減低資金成本。三、為促進資本證券化，證券大眾化，及便於績優之公開發行股票公司，發行新股時可溢價提撥對外公開招募，廣為吸收資金，增加公司營運資金，減低資金成本，爰增訂本條。
+
 * 29 公司債之發行如由金融機構擔任保證人者，得視為有擔保之發行。
 
 * 30 公司募集、發行有價證券，於申請審核時，除依公司法所規定記載事項外，應另行加具公開說明書。前項公開說明書，其應記載之事項，由主管機關以命令定之。
 
 * 31 募集有價證券，應先向認股人或應募人交付公開說明書。違反前項之規定者，對於善意之相對人因而所受之損害，應負賠償責任。
 
-* 32 前條之公開說明書，其應記載之主要內容有虛偽或欠缺之情事者，左列各款之人，對於善意之相對人，因而所受之損害，應就其所應負責部分與公司負連帶賠償責任：一、發行人及其負責人。二、發行人之職員，曾在公開說明書上簽章，以證實其所載內容之全部或一部者。三、該有價證券之證券承銷商。四、會計師、律師、工程師或其他專門職業或技術人員，曾在公開說明書上簽章，以證實其所載內容之全部或一部，或陳述意見者。
+* 32 前條之公開說明書，其應記載之主要內容有虛偽或隱匿之情事者，左列各款之人，對於善意之相對人，因而所受之損害，應就其所應負責部分與公司負連帶賠償責任：一、發行人及其負責人。二、發行人之職員，曾在公開說明書上簽章，以證實其所載內容之全部或一部者。三、該有價證券之證券承銷商。四、會計師、律師、工程師或其他專門職業或技術人員，曾在公開說明書上簽章，以證實其所載內容之全部或一部，或陳述意見者。前項第一款至第三款之人，除發行人外，對於未經前項第四款之人簽證部分，如能證明已盡相當之注意，並有正當理由確信其主要內容無虛偽、隱匿情事或對於簽證之意見有正當理由確信其為真實者，免負賠償責任；前項第四款之人，如能證明已經合理調查，並有正當理由確信其簽證或意見為真實者，亦同。
 
-* 33 認股人或應募人繳納股款或債款，應將款項連同認股書或應募書向代收款項之機構繳納之；代收機構收款後，應向各該繳款人交付經由發行人簽章之股款或債款之繳納憑證。前項繳納憑證及其存根，應由代收機構簽章，並將存根交還發行人。
+> 釋：一、第一項未修正。二、第二項新增。本條現行規定係採結果責任主義，即公開說明書記載之主要內容如有虛偽或欠缺之情事，本條各款所列之人應與公司負連帶賠償責任，並無免責之餘地。就保護投資人言，固有其優點，但對發行人以外之人，如已極盡調查或相當注意之能事，縱無過失，仍須負連帶賠償責任，顯屬過苛，故增訂第二項可免責之事由，以減輕各該人員之責任，並促進其善盡調查及注意之義務。惟公開說明書為發行人所製作，其內容如有虛偽或欠缺之情事，發行人自應負責，故發行人不在得免責之列。
+
+* 33 認股人或應募人繳納股款或債款，應將款項連同認股書或應募書向代收款項之機構繳納之；代收機構收款後，應向各該繳款人交付經由發行人簽章之股款或債款之繳納憑證。前項繳納憑證及其存根，應由代收機構簽章，並將存根交還發行人。已依本法發行有價證券之公司發行新股時，如依公司法第二百七十三條公告之股款繳納期限在一個月以上者，認股人逾期不繳納股款，即喪失其權利，不適用公司法第二百六十六條第三項準用同法第一百四十二條之規定。
+
+> 釋：一、第一項、第二項未修正。二、第三項新增。公開發行公司募集新股，少數股東每藉公司法延欠股款之規定，阻撓公司如期完成增資，影響多數認股人權益，為兼顧雙方權益，增訂第三項，在特定條件下排除公司法所定催繳延欠股款規定之適用。
 
 * 34 發行人應於依公司法得發行股票或公司債券之日起三十日內，對認股人或應募人憑前條之繳納憑證，交付股票或公司債券，並應於交付前公告之。公司股款、債款繳納憑證之轉讓，應於前項規定之限期內為之。
 
 * 35 公司發行股票或公司債券應經簽證，其簽證規則，由主管機關定之。
 
-* 36 已依本法發行有價證券之公司，應於每營業年度終了，辦理決算後十五日內，將財務報告先經會計師查核簽證，並依法提經股東常會承認後，向主管機關申報並公告之。有價證券已在證券交易所上市之公司，除依前項之規定外，應於每半營業年度終了辦理結算後十五日內，將財務報告先經會計師查核簽證，並經董事會、監察人承認後向主管機關申報並公告之。前項之財務報告，應以抄本送證券交易所或證券商同業公會，以供公眾閱覽。第一項之股東常會，應於每營業年度終了後六個月內召集之。
+* 36 已依本法發行有價證券之公司，應於每營業年度終了後四個月內公告並向主管機關申報，經會計師查核簽證、董事會通過及監察人承認之年度財務報告。其除經主管機關核准者外，並依左列規定辦理：一、於每半營業年度終了後二個月內，公告並申報經會計師查核簽證、董事會通過及監察人承認之財務報告。二、於每營業年度第一季及第三季終了後一個月內，公告並申報經會計師核閱之財務報告。三、於每月十日以前，公告並申報上月份營運情形。前項公司有左列情事之一者，應於事實發生之日起二日內公告並向主管機關申報：一、股東常會承認之年度財務報告與公告並向主管機關申報之年度財務報告不一致者。二、發生對股東權益或證券價格有重大影響之事項。第一項之公司，應編製年報，於股東常會分送股東；其應記載之事項，由主管機關定之。第一項及第二項公告、申報事項暨前項年報，有價證券已在證券交易所上市買賣者，應以抄本送證券交易所及證券商同業公會；有價證券已在證券商營業處所買賣者，應以抄本送證券商同業公會供公眾閱覽。第二項第一款及第三項之股東常會，應於每營業年度終了後六個月內召集之。公司在重整期間，第一項所定董事會及監察人之職權，由重整人及重整監督人行使。
+
+> 釋：一、發行公司之財務報告為投資人投資有價證券之主要參考依據，除必須符合可靠性、公開性外，尚須具時效性，使投資人了解公司之現狀與未來。本條現行第一項規定年度財務報告之申報及公告，須俟提經股東常會承認，而股東常會依公司法第一百七十二條第二項規定應於營業年度終了後六個月內召集，惟同項但書復規定有正當理由報經公司主管機關核准者，不在此限，致屢有於營業年度終了六個月後再行申報及公告，已失去其時效性，爰修正內容如次：（一）將年度財務報告申報期限，提前於營業年度終了後四個月內，並僅須經會計師查核簽證，提經董事會通過、監察人承認後，即可公告並向主管機關申報，免再俟提經股東會承認後申報。（二）將現以行政命令規定，公告並申報半營業年度財務報告期限改為半營業年度結束後二個月內，暨增加公告並申報第一季、第三季報與每月營業情形（包括營業額、背書保證資料等）予以納入。二、增訂第二項，對先公告並向主管機關申報之財務報告，與提經股東會承認不一致之再行申報，及發生偶發重大事項之公告及申報規定。三、第三項新增。鑒於發行公司除在募集與發行有價證券之年度，依本法第三十條始編製公開說明書，對公司財務業務狀況與展望有較詳盡報導外，在未辦理增資或發行公司債之年度，雖於召開股東常會，備有財務報告及議事手冊或議事錄，內容又失之簡略。為使投資人對公司之現況及未來有較詳盡之認識，及配合推動僑外資投資證券市場，編製中英對照，內容較詳盡之年報，對於發行公司本身亦屬有益，爰增訂第三項。四、現行第三項移列為第四項，並配合前三項之修正，明定有價證券已上市之公司，其有關財務報告，須分別以抄本送證券交易所及證券商同業公會，若僅在證券商營業處所買賣者，並無庸抄送證券交易所，僅須送交證券商同業公會，爰作文字修正。五、第六項新增。依公司法第二百九十三條第一項規定，發行有價證券之公司如經裁定重整，公司之董事、監察人之職權，應予停止。則第一項所規定申報年度、半年度財務報告即無法辦理，爰增訂第六項。
 
 * 37 會計師辦理前條財務報告之查核簽證，應經主管機關之核准；其準則由主管機關定之。會計師辦理前項簽證，發生錯誤或疏漏者，主管機關得視情節之輕重，為左列處分：一、警告。二、停止其二年以內辦理本法所定之簽證。三、撤銷簽證之核准。前條之財務報告，應備置於公司及其分支機構，以供股東及公司債權人之查閱或抄錄。
 
@@ -98,15 +140,27 @@
 
 * 40 對於有價證券募集之核准，不得藉以作為證實申請事項或保證證券價值之宣傳。
 
-* 41 主管機關認為有必要時，對於已依本法發行有價證券之公司，得以命令規定其於分派盈餘時，除依法提出法定盈餘公積外，並應另提一定比率之特別盈餘公積。
+* 41 主管機關認為有必要時，對於已依本法發行有價證券之公司，得以命令規定其於分派盈餘時，除依法提出法定盈餘公積外，並應另提一定比率之特別盈餘公積。已依本法發行有價證券之公司申請以法定盈餘公積或資本公積撥充資本時，應先填補虧損，不適用公司法第二百三十九條第一項但書之規定；其以土地增值或資產重估增值之資本公積撥充資本者，應以其增值淨額之一定比率為限。
+
+> 釋：一、第一項未修正。二、第二項新增。依公司法第二百三十九條第一項規定暨經濟部（七十一、二、十五商０四三一五號函）解釋，公司以法定盈餘公積或資本公積撥充資本時，不受先彌補虧損之限制，玆為健全發行公司之資本結構及確保資本維持原則，爰增訂第二項前段。又發行公司以資產重估增值之資本公積轉撥資本，增發新股分配股東，如此項增值尚未實現，則其增值並無現金投入，對於公司營運亦無助益，而公積原屬股東權益，配股徒使股份膨脹，股價因除權而下降，從而影響每股盈餘之分配減少，致公司業績表達形成不良印象，歪曲證券市場之正常形象，爰增訂第二項後段。
 
 * 42 公司對於未依本法發行之股票，擬在證券交易所上市或於證券商營業處所買賣者，應先向主管機關申請補辦本法規定之有關發行審核程序。未依前項規定補辦發行審核程序之公司股票，不得為本法之買賣，或為買賣該種股票之公開徵求或居間。
 
-* 43 有價證券買賣之給付或交割，應以現款、現貨為之。但已上市之有價證券買賣，其交割期間及預繳買賣證據金數額，得由主管機關以命令定之。
+* 43 有價證券買賣之給付或交割，應以現款、現貨為之。但已上市之有價證券買賣，其交割期間及預繳買賣證據金數額，得由主管機關以命令定之。證券集中保管事業保管之有價證券，其買賣之交割，得以帳簿劃撥方式為之；其作業辦法，由主管機關定之。以證券集中保管事業保管之有價證券為設質之標的者，其設質之交付，得以帳簿劃撥方式為之，並不適用民法第九百零八條之規定。證券集中保管事業保管之股票，經證券集中保管事業將所保管股票號碼、股票所有人之本名或名稱、住所或居所及所持有股數通知該股票之發行公司時，視為已記載於公司股東名簿或已將股票交存公司，不適用公司法第一百六十五條第一項及第一百七十六條之規定。
 
-* 44 證券商須經主管機關之特許及發給特許證照，方得營業；非證券商不得經營證券業務。證券商分支機構之設立，應經主管機關許可。
+> 釋：一、第一項未修正。二、第二項、第三項新增。為簡化現行證券交割作業，發揮證券集中保管功能，其買賣之交割，明定得以帳簿劃撥方式為之。又以集中保管之有價證券為設質之際的者，其設質之交付亦明定得以帳簿劃撥方式為之，俾免亦須提出為設質之背書，減低集中保管之功能，爰增訂第二、三項。三、第四項新增。為簡化進入集中保管之股票，辦理過戶或設質登記仍須實物之移送，及送存人應分赴各股票發行公司辦理簽章，爰增訂第四項。
 
-* 45 證券商應依第十六條之規定，分別依其種類經營證券業務，不得經營其本身以外之業務。但經主管機關核准者，除依第一百零一條之規定外，得兼營他種證券業務或與其有關之業務。證券商不得由他業兼營。但金融機構得經主管機關之許可，兼營證券業務。證券商不得投資於其他證券商。
+* 43.1 任何人單獨或與他人共同取得任一公開發行公司已發行股份總額超過百分之十之股份者，應於取得後十日內，向主管機關申報其取得股份之目的、資金來源及主管機關所規定應行申報之事項；申報事項如有變動時，並隨時補正之。不經由有價證券集中交易市場或證券商營業處所，對非特定人公開收購公開發行公司之有價證券者，非經主管機關核准，不得為之。前項公開收購公開發行公司有價證券管理辦法，由主管機關定之。
+
+> 釋：一、本條新增。二、美國證券交易法第十三條第四項之規定，任何人單獨或與他人共同取得某一證券超過發行股數百分之五者，應於取得後十日內向證券交易所、發行公司、證管會等提出說明書，說明其資金、取得證券之目的、取得人之背景等資料，用使主管機關及投資人能了解公司股權大量變動之來由及其趨向，亦是「完全公開」原則之發揮。
+
+* 44 證券商須經主管機關之許可及發給許可證照，方得營業；非證券商不得經營證券業務。證券商分支機構之設立，應經主管機關許可。外國證券商在中華民國境內設立分支機構，應經主管機關許可及發給許可證照。證券商設置標準及管理規則，由主管機關定之。
+
+> 釋：一、第一項、第二項未修正。二、第三項新增。為吸取外國證券商經營經驗，提升我國證券商服務水準，暨拓寬我國企業吸取外資管道，改善資本結構，促使證券國際化，增訂第三項，容許外國證券商於我國境內設立分支機構。三、第四項新增。對於證券商之管理、監督，除已見諸於本法各有關規定外，尚待規範之事項頗多，為便於對證券商之統一管理，爰增訂第四項規定，授權主管機關訂定管理規則，俾利於對證券商之管理。
+
+* 45 證券商應依第十六條之規定，分別依其種類經營證券業務，不得經營其本身以外之業務。但經主管機關核准者，得兼營他種證券業務或與其有關之業務。證券商不得由他業兼營。但金融機構得經主管機關之許可，兼營證券業務。證券商不得投資於其他證券商。但兼營證券業務之金融機構，報經財政部核准者，不在此限。華僑及外國人投資證券商者，應經主管機關核准。
+
+> 釋：一、配合證券市場發展及健全證券交易市場，證券商之功能亟須加強，宜實施綜合證券商制，取消其營業限制，俾提高對投資大眾之服務品質，爰修正第一項，刪除「除依第一百零一條規定外」等之文字。二、第二項未修正。三、第三項原立法意旨，係在避免證券商間相互投資操縱，壟斷市場。但對於金融機構兼營之證券商，兼營證券業務僅其業務之一部分，且非其事業之主要業務，當不致發生操縱壟斷市場流弊之可能，爰參照銀行法第三十五條之一增列但書。四、第四項新增。為提升證券商服務水準，將來可視實際情形開放國際間聲譽卓著之華僑及外國人投資於證券商參予經營，爰增訂第四項。
 
 * 46 證券商依前條第一項但書之規定，兼營證券自營商及證券經紀商者，應於每次買賣時，以書面文件區別其為自行買賣或代客買賣。
 
@@ -118,17 +172,27 @@
 
 * 50 證券商之公司名稱，應標明證券之字樣。但依第四十五條第二項但書之規定為證券商者，不在此限。非證券商不得使用類似證券商之名稱。
 
-* 51 證券商之董事、監察人或經理人不得投資於其他證券商，或兼為其他證券商之董事、監察人或經理人。
+* 51 證券商之董事、監察人或經理人不得投資於其他證券商，或兼為其他證券商或公開發行公司之董事、監察人或經理人。但兼營證券業務之金融機構，因投資關係，其董事、監察人或經理人，得兼為其他證券商或公開發行公司之董事、監察人或經理人。
 
-* 52 證券商公司所發行之股票，不得於有價證券集中交易市場，上市交易。但由銀行兼營證券商者，不在此限。
+> 釋：一、為使證券商之董事、監察人、經理人，能專心致力於證券事業，提高證券商之信譽，避免上開人員因投資於發行公司而兼任重要職務，予人操作股票之不佳風評，對其兼職之限制，增列包括公開發行公司之董事、監察人或經理人。二、增列但書，排除兼營證券之金融機構，如因投資關係，對證券商之董事、監察人或經理人不得兼為其他證券商或公開發行公司之董事、監察人或經理人限制。
 
-* 53 證券商之董事、監察人或經理人所應具備之條件，除依公司法之規定外，並不得有左列各款情事：一、曾任法人宣告破產時之董事、監察人、經理人或與其地位相等之人，其破產終結未滿三年或調協未履行者。二、最近三年內在金融機構有拒絕往來或喪失債信之紀錄者。三、依本法之規定判處罰金，未滿五年者。四、違反第五十一條之規定者。五、受第五十六條第一項解除職務之處分，未滿五年者。
+* 52 （刪除）
 
-* 54 證券商僱用對於有價證券營業行為直接有關之業務人員，應為有行為能力之中華民國國民，且具備有關法令所規定之資格條件，並無左列各款情事之一者：一、受破產之宣告，尚未復權者。二、兼任其他證券商之職務者。三、投資於其他證券商者。四、曾犯詐欺、背信罪或違反工商管理法律，受有期徒刑以上刑之宣告，執行完畢，緩刑期滿或赦免後未滿三年者。五、有前條第一款至第三款及第五款之情事者。六、違反主管機關依照本法所發布之命令者。前項業務人員之職稱，由主管機關以命令定之。
+> 釋：為因應證券市場發展及健全證券交易市場，加強證券商功能，修正條文第四十五條已可實施綜合證券商之制度。則本條限制證券商之股票不得上市買賣規定，亦須配合調整，以利推展綜合證券商制度，便於對外吸收資金，爰予以刪除。
+
+* 53 有左列情事之一者，不得充任證券商之董事、監察人或經理人；其已充任者，解任之，並由主管機關函請經濟部撤銷其董事、監察人或經理人登記：一、有公司法第三十條各款情事之一者。二、曾任法人宣告破產時之董事、監察人、經理人或與其地位相等之人，其破產終結未滿三年或調協未履行者。三、最近三年內在金融機構有拒絕往來或喪失債信之紀錄者。四、依本法之規定，受罰金以上刑之宣告，執行完畢、緩刑期滿或赦免後未滿五年者。五、違反第五十一條之規定者。六、受第五十六條及第六十六條第二款解除職務之處分，未滿五年者。
+
+> 釋：一、參照公司法第三十條之立法例，修正本條序文，並將「除依公司法之規定」所指之「該法第三十條各款情事」列為第一款。二、現行第一款、第二款、第三款、第四款之款次遞移為第二款、第三款、第四款、第五款，又第四款僅限於「罰金」，不包括受拘役或有期徒刑之宣告，顯非合理，爰參照第五十四條第一項第五款之規定予以納入外，其餘各款文字未修正。三、配合第五十六條之修正及第六十六條增訂第二款，修正現行之第五款文字，款次並移列為第六款。
+
+* 54 證券商僱用對於有價證券營業行為直接有關之業務人員，應為有行為能力之中華民國國民，且具備有關法令所規定之資格條件，並無左列各款情事之一者：一、受破產之宣告尚未復權者。二、兼任其他證券商之職務者。三、投資於其他證券商者。四、曾犯詐欺、背信罪或違反工商管理法律，受有期徒刑以上刑之宣告，執行完畢，緩刑期滿或赦免後未滿三年者。五、有前條第二款至第四款及第六款之情事者。六、違反主管機關依照本法所發布之命令者。前項業務人員之職稱，由主管機關以命令定之。
+
+> 釋：一、第一項第五款所引之「前條第一款至第三款及第五款」，因前條已修正，款別調整，爰配合修正為「前條第二款至第四款及第六款」。其餘各款未修正。二、第二項未修正。
 
 * 55 證券商於辦理公司設立登記後，應依主管機關規定，提存營業保證金。因證券商特許業務所生債務之債權人，對於前項營業保證金，有優先受清償之權。
 
-* 56 主管機關發現證券商之董事、監察人、經理人及對於有價證券營業行為直接有關之業務人員，有違背本法或其他有關法令之行為，足以影響證券業務之正常執行者，得隨時命令該證券商解除其職務。前項人員於解除職務後，應由證券商申報主管機關。
+* 56 主管機關發現證券商之董事、監察人及受僱人，有違背本法或其他有關法令之行為，足以影響證券業務之正常執行者，除得隨時命令該證券商解除其職務外，並得視其情節之輕重，對證券商處以第六十六條所定之處分。前項人員於解除職務後，應由證券商申報主管機關。
+
+> 釋：一、現行條文第一項所定解任職務之對象，僅限於證券商之董事、監察人、經理人及對於有價證券營業行為直接有關之業務人員，致證券商屢有以利用其他受僱人員，為違背本法或其他有關法令之行為，以規避本法之管理。爰將「經理人及對於有價證券營業行為直接有關之業務人員」修正為「受僱人」。另為督促證券商之組織健全，對所屬人員善盡監督之責，爰於現行規定得隨時命令該證券商解除其職務外，增列「並得視其情節之輕重，對證券商處以第六十六條所定之處分」。二、第二項未修正。
 
 * 57 證券商取得經營證券業務之特許，或設立分支機構之許可後，經主管機關發覺有違反法令或虛偽情事者，得撤銷其特許或許可。
 
@@ -136,11 +200,17 @@
 
 * 59 證券商自受領證券業務特許證照，或其分支機構經許可並登記後，於三個月內未開始營業，或雖已開業而自行停止營業連續三個月以上時，主管機關得撤銷其特許或許可。前項所定期限，如有正當事由，證券商得申請主管機關核准延展之。
 
-* 60 證券商不得有左列各款之行為：一、收受存款或辦理放款。二、借貸有價證券。三、借貸款項或有價證券之代理或居間。關於有價證券買賣之放款或有價證券之借貸，由依第十八條設立之證券金融機構為之。
+* 60 證券商不得收受存款、辦理放款、借貸有價證券及為借貸款項或有價證券之代理或居間。但經主管機關核准者，得為左列之行為：一、有價證券買賣之融資或融券。二、有價證券買賣融資融券之代理。證券商辦理有價證券買賣融資融券之管理辦法，由財政部擬訂報請行政院核定之。
 
-* 61 前條第二項有價證券買賣之放款，或有價證券借貸業務之核准標準及管理辦法，由主管機關商經中央銀行同意後定之。
+> 釋：（一）為使用語簡明並與財政部證券管理委員會組織條例第二條第一項第十款用語一致，將「有價證券買賣之放款或有價證券之借貸」修正為「有價證券買賣之融資或融券」。（二）將現行第一項各款均納入序文，並增列但書規定。（三）有價證券買賣之融資或融券，第一項已修正證券商經主管機關核准者，亦得為之，則第二項所設有價證券買賣之融資或融券專由證券金融機構為之之規定，自應予以刪除。至於證券金融事業之業務範圍，則於第十八條授權訂定之「證券金融事業管理規則」中規定。（四）參照第十八條對證券金融等事業管理、監督事項之訂定機關，增訂第二項，對證券商辦理有價證券買賣融資融券之管理辦法，由財政部擬訂報請行政院核定之。
 
-* 62 證券經紀商或證券自營商在其營業處所，受託或自行買賣有價證券者，非經主管機關核准，不得為之。前項買賣，不得以類似有價證券集中交易市場之方式為之。第一百五十五條及第一百五十六條之規定，於第一項之買賣準用之。
+* 61 有價證券買賣融資融券之額度、期限及融資比率、融券保證金成數，由主管機關商經中央銀行同意後定之；有價證券得為融資融券標準，由主管機關定之。
+
+> 釋：關於有價證券買賣之放款（融資）或有價證券之借貸（融券），其融資融券之額度、期限及融資比率、融券保證金成數等，與中央銀行業務有關；至於得為融資融券標的之審定，基於對發行公司財務業務之瞭解與市場管理之需要，應屬主管機關之職責。現行條文尚欠明確與具體，爰予修正。
+
+* 62 證券經紀商或證券自營商，在其營業處所受託或自行買賣有價證券者，非經主管機關核准不得為之。前項買賣之管理辦法，由主管機關定之。第一百五十六條及第一百五十七條之規定，於第一項之買賣準用之。
+
+> 釋：一、為使主管機關得視實際需要，並參酌美、日店頭交易方式與趨向，爰將第二項修正為授權主管機關訂定其買賣之管理辦法。二、第三項修正如左：（一）準用第一百五十五條部分，因修正條文第一百五十五條增訂之第二項，已明定同條第一項於證券商營業處所買賣有價證券準用之，本條即無重複規定之必要，故刪。（二）對本法第一百五十七條，限制上市公司董事、監察人、經理人及大股東，短期買賣本公司股票利益須歸入公司之規定，於證券商營業處所買賣之股票，亦須準用，爰予增列準用。
 
 * 63 第三十六條關於編製、申報及公告財務報告之規定，於證券商準用之。
 
@@ -148,7 +218,9 @@
 
 * 65 主管機關於調查證券商之業務、財務狀況時，發現該證券商有不符合規定之事項，得隨時以命令糾正之。
 
-* 66 證券商違反本法或依本法所發布之命令者，除依本法處罰外，主管機關並得視情節之輕重，為左列處分：一、警告。二、六個月以內之停業。三、營業特許之撤銷。
+* 66 證券商違反本法或依本法所發布之命令者，除依本法處罰外，主管機關並得視情節之輕重，為左列處分：一、警告。二、命令該證券商解除其董事、監察人或經理人職務。三、六個月以內之停業。四、營業許可之撤銷。
+
+> 釋：為增強對證券商管理，防止違規與不法情事發生。參考銀行法第一百三十六條及證券交易法第一百六十三條，增訂第二款「命令該證券商解除其董事、監察人或經理人職務」之處分，現行第二款及第三款則遞移為第三款及第四款。
 
 * 67 證券商經主管機關依本法之規定撤銷其特許或命令停業者，該證券商應了結其被撤銷前或停業前所為有價證券之買賣或受託之事務。
 
@@ -158,17 +230,23 @@
 
 * 70 證券商負責人與業務人員之管理事項，由主管機關以命令定之。
 
-* 71 證券承銷商包銷有價證券，於承銷契約所訂定之承銷期間屆滿後，對於約定包銷之有價證券，未能全數銷售者，其賸餘數額之有價證券，應自行認購之。
+* 71 證券承銷商包銷有價證券，於承銷契約所訂定之承銷期間屆滿後，對於約定包銷之有價證券，未能全數銷售者，其賸餘數額之有價證券，應自行認購之。證券承銷商包銷有價證券，得先行認購後再行銷售或於承銷契約訂明保留一部分自行認購。證券承銷商辦理前項之包銷，其應具備之條件，由主管機關定之。
+
+> 釋：一、第一項未修正。二、第二項、第三項新增。為擴大承銷商功能，增訂第二項允許承銷商得依承銷契約，為自己取得或批售包銷之有價證券；至其包銷應具之條件，於第三項授權主管機關定之。
 
 * 72 證券承銷商代銷有價證券，於承銷契約所訂定之承銷期間屆滿後，對於約定代銷之有價證券，未能全數銷售者，其賸餘數額之有價證券，得退還發行人。
 
 * 73 第七十一條及第七十二條之承銷期間，不得少於十日，多於三十日。
 
-* 74 證券承銷商於承銷期間內，不得為自己取得所包銷或代銷之有價證券。
+* 74 證券承銷商除依第七十一條規定外，於承銷期間內，不得為自己取得所包銷或代銷之有價證券。
+
+> 釋：配合第七十一條增訂第二項，爰於本條增列除外規定。
 
 * 75 證券承銷商出售依第七十一條規定所取得之有價證券，應依本法之規定，於有價證券集中交易市場為之；其未上市者，得於經主管機關依第六十二條核准之證券經紀商或證券自營商之營業處所為之。
 
-* 76 證券承銷商承銷契約，應記載左列事項：一、契約當事人之名稱、地址及其負責人之姓名。二、包銷或代銷之標的名稱、數量、金額及發行價格。三、主管機關核准募集或發行之年、月、日。四、承銷期間之起訖日期。五、承銷付款日期及方式。六、包銷報酬或代銷手續費之計算及支付日期。七、包銷時賸餘有價證券之認購方法，或代銷時賸餘有價證券之退還方法。八、其他約定事項。證券承銷商共同承銷者，其共同契約之內容，除應表明連帶負責之旨及其共同承銷之負責人外，適用前項之規定。
+* 76 證券承銷商承銷契約，應記載左列事項：一、契約當事人之名稱、地址及其負責人之姓名。二、包銷或代銷之標的名稱、數量、金額及發行價格。三、主管機關核准募集、發行或申報生效之年、月、日。四、承銷期間之起訖日期。五、承銷付款日期及方式。六、包銷報酬或代銷手續費之計算及支付日期。七、包銷之方式、包銷時賸餘有價證券之認購方法，或代銷時賸餘有價證券之退還方法。八、其他主管機關所規定事項。證券承銷商共同承銷者，應指定一承銷商為主辦承銷商，其共同契約之內容，除適用前項之規定外，並應訂明主辦承銷商與其他共同承銷商承銷比例及其責任內容。
+
+> 釋：一、第一項作文字修正。二、第二項所定之共同承銷，宜區分為主辦承銷商與其他共同承銷商，並於承銷契約訂明承銷比例；所負連帶責任，亦宜由承銷商於承銷契約視承銷內容、比例訂定責任內容；至於共同承銷應於承銷契約表明共同承銷負責人，在第一項第一款已有明定，不無重複，爰修正第二項。
 
 * 77 證券承銷商於履行承銷契約開始銷售前，應將承銷契約之副本申報主管機關備查。
 
@@ -220,7 +298,9 @@
 
 * 100 主管機關於特許或許可證券交易所設立後，發現其申請書或加具之文件有虛偽之記載，或有其他違反法令之行為者，得撤銷其特許或許可。
 
-* 101 證券自營商或證券經紀商，為證券交易所之會員，或與證券交易所訂立有價證券集中交易市場使用契約時，應以證券自營商或證券經紀商之一種身分為限。
+* 101 （刪除）
+
+> 釋：為配合第四十五條第一項之修正，本條規定證券商與證券交易所訂立有價證券集中交易市場使用契約限於一種身分之限制，已無必要，爰予刪除。
 
 * 102 證券交易所業務之指導、監督及其負責人與業務人員管理事項，由主管機關以命令定之。
 
@@ -270,7 +350,9 @@
 
 * 125 公司制證券交易所章程，除依公司法規定者外，並應記載左列事項：一、在交易所集中交易之經紀商或自營商之名額及資格。二、存續期間。前項第二款之存續期間，不得逾十年。但得視當地證券交易發展情形，於期滿三個月前，呈請主管機關核准延長之。
 
-* 126 證券商及其股東或經理人不得為公司制證券交易所之董事、監察人或經理人。
+* 126 證券商及其股東或經理人不得為公司制證券交易所之董事、監察人或經理人。但金融機構兼營證券業務者，因投資關係，並經主管機關核准者，除經理人職位外，不在此限。公司制證券交易所之董事、監察人至少應有三分之一，由主管機關指派非股東之有關專家任之；不適用公司法第一百九十二條第一項及第二百十六條第一項之規定。
+
+> 釋：一、本條原立法意旨係為杜防證券商人員兼任公司制證券交易所職務時，發生利用職務操縱圖利情事。惟鑒於金融事業自有其本身主要業務，其投資公司制證券交易所以及兼營證券業務，多出於執行政府金融措施，且需受財政部監督管理，其指派代表兼任公司制證券交易所董事、監察人，應無發生流弊之虞，爰參照銀行法第三十五條之一，增列但書，准其兼任。二、第二項新增。證券交易所為證券集中交易市場之核心，集中交易市場之建立、市場之運作以及交易秩序之維護，具有公益性質。為使社會公正人士或證券投資專家參與證券交易所董事會表達其意見，或以監察人監督公司業務之執行，以發揮證券交易所實際功能，爰參照第一百十三條會員制證券交易所選任非會員為董事之例，增訂本條第二項。
 
 * 127 公司制證券交易所發行之股票，不得於自己或他人開設之有價證券集中交易市場，上市交易。
 
@@ -292,11 +374,15 @@
 
 * 136 證券自營商或證券經紀商依第一百三十三條之規定終止契約，或被停止買賣時，對其在有價證券集中交易市場所為之買賣，有了結之義務。
 
-* 137 第四十八條、第五十三條第一款至第三款及第五款、第五十八條、第五十九條、第一百十五條、第一百十七條、第一百十九條至第一百二十一條及第一百二十三條之規定，於公司制證券交易所準用之。
+* 137 第四十一條、第四十八條、第五十三條第一款至第四款及第六款、第五十八條、第五十九條、第一百十五條、第一百十七條、第一百十九條至第一百二十一條及第一百二十三條之規定，於公司制證券交易所準用之。
+
+> 釋：一、避免公司制證券交易所過度分派盈餘，或資產重估增值徒使股份膨脹等，增列第四十一條之準用。二、現行第五十三條「第一款至第三款及第五款」之款次已修正改列為第二款至第四款及第六款，又修正條文第五十三條第一款有關公司法第三十條規定事項，仍應準用，爰修正為「第五十三條第一款至第四款以及第六款」。
 
 * 138 證券交易所，除分別訂定各項準則外，應於其業務規則或營業細則中將有關左列各款事項詳細訂定之：一、有價證券之上市。二、有價證券集中交易市場之使用。三、證券經紀商或證券自營商之買賣受託。四、市場集會之開閉與停止。五、買賣種類。六、證券自營商或證券經紀商間進行買賣有價證券之程序，及買賣契約成立之方法。七、買賣單位。八、價格升降單位及幅度。九、結算及交割日期與方法。十、其他有關買賣之事項。前項各款之訂定，不得違反法令之規定；其有關證券商利益事項，並應先徵詢證券商同業公會之意見。
 
-* 139 依本法發行之有價證券，得由發行人向證券交易所申請上市。股票已上市之公司，再發行新股時，應於向股東交付所發新股股票之日起三十日內，向證券交易所申請上市。
+* 139 依本法發行之有價證券，得由發行人向證券交易所申請上市。股票已上市之公司，再發行新股者，其新股股票於向股東交付之日起上市買賣。但公司有第一百五十六條第一項各款情事之一時，主管機關得限制其上市買賣。前項發行新股上市買賣之公司，應於新股上市後十日內，將有關文件送達證券交易所。
+
+> 釋：一、第一項未修正。二、為簡化股票已上市公司之再發行新股之上市程序，第二項修正為二、三兩項；並於第二項增列但書，規定公司若發生有第一百五十六條第一項各款情事之一時，主管機關得限制其上市買賣，俾免上市後依第一百五十六條予以限制買賣。
 
 * 140 證券交易所應訂定有價證券上市審查準則及上市契約準則，申請主管機關核定之。
 
@@ -318,7 +404,9 @@
 
 * 149 政府發行之債券，其上市由主管機關以命令行之，不適用本法有關上市之規定。
 
-* 150 上市有價證券之買賣，應於證券交易所開設之有價證券集中交易市場為之。但左列各款不在此限：一、政府所發行債券之買賣。二、基於法律規定所生之效力，不能經由有價證券集中交易市場之買賣而取得或喪失證券所有權者。三、私人間之直接讓受，其數量不超過該證券一個成交單位；前後兩次之讓受行為，相隔不少於三個月者。
+* 150 上市有價證券之買賣，應於證券交易所開設之有價證券集中交易市場為之。但左列各款不在此限：一、政府所發行債券之買賣。二、基於法律規定所生之效力，不能經由有價證券集中交易市場之買賣而取得或喪失證券所有權者。三、私人間之直接讓受，其數量不超過該證券一個成交單位；前後兩次之讓受行為，相隔不少於三個月者。四、其他符合主管機關所定事項者。
+
+> 釋：本條係規定上市之有價證券應於集中交易市場買賣，但政府債券之買賣，及所列舉之第二款、第三款非屬常業性之私人間讓受行為，不在此限。惟以非屬常業性之私人間讓受行為，各有不同情況，該二款之規定已不足以涵蓋，如上市公司股東，基於公司法第三百十七條等有關規定，請求公司收購其所持有之股份，其收購價格與收購日市場價格如有差異時，暨華僑或外國人奉核准投資於股票上市公司，其股票經經濟部投審會依外國人投資條例第十一條第二項核准讓售他人等，是否屬第二款之範圍等，常有爭議。為因應市場不同情況，爰增訂第四款授權主管機關得衡酌規定，以具彈性。
 
 * 151 於有價證券集中交易市場為買賣者，在會員制證券交易所限於會員；在公司制證券交易所限於訂有使用有價證券集中交易市場契約之證券自營商或證券經紀商。
 
@@ -328,15 +416,21 @@
 
 * 154 證券交易所得就其證券交易經手費提存賠償準備金，備供前條規定之支付，其攤提方法、攤提比率、停止提存之條件及其保管、運用之方法，由主管機關以命令定之。因有價證券集中交易市場買賣所生之債權，就第一百零八條及第一百三十二條之交割結算基金有優先受償之權，其順序如左：一、證券交易所。二、委託人。三、證券經紀商、證券自營商。交割結算基金不敷清償時，其未受清償部分，得依本法第五十五條第二項之規定受償之。
 
-* 155 對於在證券交易所上市之有價證券，不得有左列各款之行為：一、在有價證券集中交易市場無實際成交意思，空報價格，業經有人承諾接受而不實際成交，足以影響市場秩序者。二、意圖影響市場行情，不移轉證券所有權而偽作買賣者。三、意圖影響市場行情，與他人通謀，以約定價格於自己出售，或購買有價證券時，使約定人同時為購買或出售之相對行為者。四、意圖影響市場行情，對某種有價證券，連續以高價買入或以低價賣出者。五、惡意散布足以影響市場行情之流言或不實資料者。六、直接或間接從事其他以影響市場行情為目的之行為者。
+* 155 對於在證券交易所上市之有價證券，不得有左列各款之行為：一、在集中交易市場報價，業經有人承諾接受而不實際成交或不履行交割，足以影響市場秩序者。二、在集中交易市場，不移轉證券所有權而偽作買賣者。三、意圖抬高或壓低集中交易市場某種有價證券之交易價格，與他人通謀，以約定價格於自己出售，或購買有價證券時，使約定人同時為購買或出售之相對行為者。四、意圖抬高或壓低集中交易市場某種有價證券之交易價格，自行或以他人名義，對該有價證券，連續以高價買入或以低價賣出者。五、意圖影響集中交易市場有價證券交易價格，而散布流言或不實資料者。六、直接或間接從事其他影響集中交易市場某種有價證券交易價格之操縱行為者。前項之規定，於證券商營業處所買賣有價證券準用之。違反前二項規定者，對於善意買入或賣出有價證券之人所受之損害，應負賠償之責。第二十條第四項之規定，於前項準用之。
+
+> 釋：一、本條立法意旨原在防止證券價格受操縱，違反者，應依第一百七十一條規定處以刑罰，惟因第二款至第六款均以「意圖影響市場行情」為要件，何謂「市場行情」，主管機關與法院見解，頗生歧異，致管理及移罰效果不彰，爰將本條各款作左列修正：（一）有第一款及第二款之行為，即足以破壞市場交易秩序及公平，爰予以修正之。（二）將第三款、第四款及第六款之「市場行情」均修正為「集中交易市場某種有價證券交易價格」，並將第三款及第四款之「意圖影響」參照美國證券交易法第九條，修正為「意圖抬高或壓低」，以資明確。（三）於第四款增列「自行或以他人名義」之主體要件，以資周延。（四）第五款「散布．．．．之流言或不實資料」本屬惡意之行為，則該款之「惡意」文字顯屬贊詞，爰刪除「惡意」二字及「足以」之要件。（五）第六款作文字修正。二、第二項新增。將現行第六十二條第三項準用本條之規定，移列為本條第二項，以資明確。三、第三項新增。違反第一項及第二項規定者，第一百七十一條僅規定刑事責任，對善意之有價證券取得人或出賣人所受損害並無實益，為有效防止證券價格受操縱，增訂第三項，明定其應負損害賠償責任。四、增訂第四項關於委託證券經紀商以行紀名義買入或賣出之人，視為前項買入或賣出有證券者之準用規定。
 
 * 156 主管機關對於已在證券交易所上市之有價證券，發生左列各款情事之一時，得命令停止其一部或全部之買賣，或對證券自營商、證券經紀商之買賣數量加以限制：一、發行該有價證券之公司遇有訴訟事件或非訟事件，其結果足使公司解散或變動其組織、資本、業務計畫、財務狀況或停頓生產，而有影響市場秩序或損害公益之虞者。二、發行該有價證券之公司，遇有重大災害，簽訂重要契約，發生特殊事故，改變業務計畫之重要內容或退票，其結果足使公司之財務狀況有顯著重大之變更，而有影響市場秩序或損害公益之虞者。三、發行該有價證券公司之行為，有虛偽不實或違法情事，足以影響其證券價格，而及於市場秩序或損害公益之虞者。四、該有價證券之市場價格，發生連續暴漲或暴跌情事，並使他種有價證券隨同為非正常之漲跌，而有影響市場秩序或損害公益之虞者。已上市之有價證券，發生前項各款以外之情事，顯足影響市場秩序或損害公益者，主管機關經報請財政部核准後，準用前項之規定辦理。
 
 > 釋：一、本條第一項將第一、二款所定「業務計劃」修正為「業務計畫」。二、第二項配合證券管理委員會改隸，將「經濟部」修正為「財政部」，並作文字修正。三、發行有價證券之公司其信用之良窳事涉公眾利益，對其退票不應視之為一般公司行號，應作較嚴格之管理，以促使其信用健全，經營基礎穩固，以保障公眾投資之安全。
 
-* 157 發行股票公司董事、監察人、經理人或持有公司百分之五以上股權之股東，對公司之上市股票，於取得後六個月內再行賣出，或於賣出後六個月內再行買進，因而獲得利益者，公司應請求將其利益歸於公司。發行股票公司董事會或監察人不為公司行使前項請求權時，股東得以三十日之限期，請求董事或監察人行使之；逾期不行使者，請求之股東得為公司請求前項請求權。董事或監察人不行使第一項之請求以致公司受損害時，對公司負連帶賠償之責。第一項之請求權，自獲得利益之日起二年間不行使而消滅。
+* 157 發行股票公司董事、監察人、經理人或持有公司股份超過百分之十之股東，對公司之上市股票，於取得後六個月內再行賣出，或於賣出後六個月內再行買進，因而獲得利益者，公司應請求將其利益歸於公司。發行股票公司董事會或監察人不為公司行使前項請求權時，股東得以三十日之限期，請求董事或監察人行使之；逾期不行使時，請求之股東得為公司行使前項請求權。董事或監察人不行使第一項之請求以致公司受損害時，對公司負連帶賠償之責。第一項之請求權，自獲得利益之日起二年間不行使而消滅。第二十二條之二第三項之規定，於第一項準用之。
 
-> 釋：一、本條第一項、第二項未修正。二、現行條文對董事會或監察人不行使第一項請求權致公司受有損害時應負責任如何，並未明文規定，爰參照公司法第二百二十六條規定意旨，增訂第三項使董事及監察人對公司負連帶賠償責任，以保障股東權益，並加強董事及監察人執行職務之責任。三、原第三項移列為第四項。
+> 釋：一、配合第二十二條之二之增訂將第一項「持有公司百分之五以上股權之股東」修正為「持有公司股份超過百分之十之股東」。二、第二項、第三項、第四項未修正。三、第五項新增。為防股票持有人，藉配偶、未成年子女或他人名義持有股票，規避本條之限制，爰予以明定包括之。
+
+* 157.1 左列各款之人，獲悉發行股票公司有重大影響其股票價格之消息時，在該消息未公開前，不得對該公司之上市或在證券商營業處所買賣之股票，買入或賣出：一、該公司之董事、監察人及經理人。二、持有該公司股份超過百分之十之股東。三、基於職業或控制關係獲悉消息之人。四、從前三款所列之人獲悉消息者。違反前項規定者，應就消息未公開前其買入或賣出該股票之價格，與消息公開後十個營業日收盤平均價格之差額限度內，對善意從事相反買賣之人負損害賠償責任；其情節重大者，法院得依善意從事相反買賣之人之請求，將責任限額提高至三倍。第一項第四款之人，對於前項損害賠償，應與第一項第一款至第三款提供消息之人，負連帶賠償責任。但第一項第一款至第三款提供消息之人有正當理由相信消息已公開者，不負賠償責任。第一項所稱有重大影響其股票價格之消息，指涉及公司之財務、業務或該證券之市場供求，對其股票價格有重大影響，或對正當投資人之投資決定有重要影響之消息。第二十二條之二第三項之規定，於第一項第一款、第二款準用之；第二十條第四項之規定，於第二項從事相反買賣之人準用之。
+
+> 釋：一、本條新增。二、本法對於股票發行公司內部人員參與公司股票買賣，僅第一百五十七條六個月內短線買賣利益歸入公司或如符合詐欺等要件同一般人交易負本法第二十條及第一百七十一條民刑責任外，對於利用公司未經公開之重要消息買賣公司股票圖利，未明定列為禁止規定，對證券市場之健全發展，構成妨礙，並形成證券管理的一項漏失。三、對利用內部消息買賣公司股票圖利之禁止，已成為世界性之趨勢，美、英、澳、加拿大、菲律賓、新加坡．．．．等國均在其公司法或證券法規明定不得為之，違反者須負民、刑責任。為健全我國證券市場發展，爰增訂本條。
 
 * 158 證券經紀商接受於有價證券集中交易市場為買賣之受託契約，應依證券交易所所訂受託契約準則訂定之。前項受託契約準則之主要內容，由主管機關以命令定之。
 
@@ -354,7 +448,9 @@
 
 * 165 證券交易所及其會員，或與證券交易所訂有使用有價證券集中交易市場契約之證券自營商、證券經紀商，對監理人員本於法令所為之指示，應切實遵行。
 
-* 166 依本法所為有價證券交易所生之爭議，不論當事人間有無訂立仲裁契約，均應進行仲裁。前項仲裁，除本法規定外，依商務仲裁條例之規定。
+* 166 依本法所為有價證券交易所生之爭議，當事人得依約定進行仲裁。但證券商與證券交易所或證券商相互間，不論當事人間有無訂立仲裁契約，均應進行仲裁。前項仲裁，除本法規定外，依商務仲裁條例之規定。
+
+> 釋：一、參照外國立法例，對有價證券交易所生之爭議，並不採強制仲裁（如日本證券交易法第一百五十七條）。以我國已開辦僑外證券投資信託業務，在海外發行受益憑證有關事項發生爭議，依現行規定須強制仲裁，恐有窒礙難行之處，故非證券商之間，及證券商或交易所與投資人之間之爭議宜改採任意仲裁。至於證券商與證券交易所或證券商相互間，因平時業務往來密切，遇有爭議事項，應先以協調之方式解決，而宜仍維持現行強制仲裁，爰修正第一項。二、第二項未修正。
 
 * 167 爭議當事人之一造違反前條規定，另行提起訴訟時，他造得據以請求法院駁回其訴。
 
@@ -364,21 +460,41 @@
 
 * 170 證券商同業公會及證券交易所應於章程或規則內，訂明有關仲裁之事項。但不得牴觸本法及商務仲裁條例。
 
-* 171 違反第二十條第一項或第一百五十五條之規定者，處七年以下有期徒刑、拘役或科或併科一萬元以下罰金。
+* 171 違反第二十條第一項或第一百五十五條第一項、第二項之規定者，處七年以下有期徒刑、拘役或科或併科二十五萬元以下罰金。
 
-* 172 證券交易所之董事、監事、監察人或職員，對於職務上之行為，要求期約或收受不正利益者，處五年以下有期徒刑、拘役或科或併科一萬元以下罰金。前項人員對於違背職務之行為，要求期約或收受不正利益者，處七年以下有期徒刑、拘役或科或併科一萬元以下之罰金。犯前二項之罪者，所收受之財物沒收之；如全部或一部不能沒收時，追徵其價額。
+> 釋：一、配合第一百五十五條之修正，將「第一百五十五條」修正為「第一百五十五條第一項、第二項」。二、本法現行規定之罰金、罰鍰數額，係五十七年制定本法時所定者，惟目前經濟情況已有變更，其數額顯有偏低，不足以達到法律上之目的，爰參酌七十四年修正銀行法第一百二十五條等調整罰金數額之標準，將本條罰金上限提高為二十五萬元。
 
-* 173 對於前條人員行求期約或交付不正利益者，處三年以下有期徒刑、拘役或科一萬元以下罰金。犯前項之罪而自首者，得免除其刑。
+* 172 證券交易所及證券投資信託事業之董事、監事、監察人或受僱人，對於職務上之行為，要求期約或收受不正利益者，處五年以下有期徒刑、拘役或科或併科二十萬元以下罰金。前項人員對於違背職務之行為，要求期約或收受不正利益者，處七年以下有期徒刑、拘役或科或併科二十五萬元以下罰金。犯前二項之罪者，所收受之財物沒收之；如全部或一部不能沒收時，追徵其價額。
 
-* 174 有左列情事之一者，處五年以下有期徒刑、拘役或科一萬元以下罰金：一、於依本法第三十條、第四十四條或第九十三條規定之申請事項為虛偽之記載者。二、對有價證券之行情或認募核准之重要事項為虛偽之記載而散布於眾者。三、發行人及其負責人或職員有第三十二條之情事者。四、發行人或其關係人、證券商或其委託人、證券商同業公會或證券交易所，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料之內容有虛偽之記載者。五、發行人、證券商、證券商同業公會或證券交易所，於依法或主管機關基於法律所頒布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務文件之內容有虛偽之記載者。六、就發行人或某種有價證券之交易，依據不實之資料，作投資上之判斷，而以報刊、文書、廣播、電影或其他方法表示之者。七、會計師或律師，於查核公司有關證券交易之契約、報告書或證明文件時，明知有不實之記載，而仍予簽證者。主管機關對於前項第七款之情事，得予以停止執行簽證工作之處分。
+> 釋：一、證券投資信託事業經理證券投資信託基金，所屬人員對基金之經營，亦有可能發生對於職務上之行為，要求期約或收受不正利益之情事，爰於第一項增列「證券投資信託事業」。二、鑑於目前證券交易所已有部分聘僱人員參與執行重要業務，為健全交易制度，亟須嚴防利用職務圖利，爰將第一項中之「職員」修正為「受僱人」以資涵蓋。三、目前經濟情況已有變更，原定數額顯有偏低，爰將第一項罰金上限提高為二十萬元、第二項罰金上限提高為二十五萬元。四、第三項未修正。
 
-* 175 違反第二十二條、第四十三條、第四十四條、第六十條第一項、第六十二條第一項、第二項、第九十三條、第九十六條、第九十七條第二項、第九十八條、第一百十六條、第一百二十條或第一百六十條之規定者，處二年以下有期徒刑、拘役或科或併科一萬元以下罰金。
+* 173 對於前條人員關於違背職務之行為，行求期約或交付不正利益者，處三年以下有期徒刑、拘役或科或併科十五萬元以下罰金。犯前項之罪而自首者，得免除其刑。
 
-* 176 違反第七十四條或第八十四條之規定者，科相當於所取得有價證券價金額以下之罰金。
+> 釋：一、第一項作左列修正：（一）參考刑法第一百二十二條第三項、戡亂時期貪污治罪條例第十一條第一項不罰職務行為之行賄，爰增列「關於違背職務之行為」等文字，以資限定。（二）第一百七十一條至第一百七十七條，除第一百七十六條外，對罰金之科處有「或科或併科」、「或科」及「或併科」三種規定方式，為統一並考照銀行法立法例，爰均調整為「或科或併科」，俾具彈性。（三）目前經濟情況已有變更，原定數額顯有偏低，爰將罰金上限提高為十五萬元。二、第二項未修正。
 
-* 177 有左列情事之一者，處一年以下有期徒刑、拘役或科一萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十一條、第四十五條、第四十六條、第五十條第二項、第五十八條、第七十三條、第七十七條、第七十九條、第一百十九條、第一百二十八條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十條或第一百六十五條之規定者。二、發行人或其關係人、證券商或其委託人、證券商同業公會或證券交易所，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，抗不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、證券商、證券商同業公會或證券交易所，於依法或主管機關基於法律所頒布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不為製作、申報、公告、備置或保存者。四、違反主管機關第六十一條所規定之核准標準或管理辦法者。五、違反主管機關其他依本法所為禁止、停止或限制之命令者。
+* 174 有左列情事之一者，處五年以下有期徒刑、拘役或科或併科二十萬元以下罰金：一、於依本法第三十條、第四十四條第一項至第三項或第九十三條規定之申請事項為虛偽之記載者。二、對有價證券之行情或認募核准之重要事項為虛偽之記載而散布於眾者。三、發行人或其負責人、職員有第三十二條第一項之情事，而無同條第二項免責事由者。四、發行人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料之內容有虛偽之記載者。五、發行人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務文件之內容有虛偽之記載者。六、就發行人或某種有價證券之交易，依據不實之資料，作投資上之判斷，而以報刊、文書、廣播、電影或其他方法表示之者。七、會計師或律師，於查核公司有關證券交易之契約、報告書或證明文件時，為不實之簽證者。主管機關對於前項第七款之情事，得予以停止執行簽證工作之處分。
 
-* 178 違反第三十六條第三項、第六十九條第一項、第一百五十二條或第一百五十九條之規定者，處一萬元以下罰鍰。
+> 釋：一、第一項作左列修正：（一）序文增列「或併科」，並將罰金上限提高為二十萬元。（二）配合第四十四條之修正，將第一款中之「第四十四條」修正為「第四十四條第一項至第三項」。（三）第三款配合第三十二條增訂第二項，將「第三十二條之情事者」修正為「第三十二條第一項之情事，而無同條第二項免責事由者」。（四）第十八條所定之事業，對市場之功能，並不亞於證券商等機構，為增強對各該事業管理，防止有不法作為，爰於第四款及第五款增列對各該事業亦適用之規定。（五）第七款現行規定以「明知有不實之記載，而仍予簽證者。」為要件，即有以未經查證之簽證，而以未明知抗辯，無法予以處罰，顯欠周延，爰修正為「為不實之簽證者。」二、第二項未修正。
+
+* 175 違反第十八條第一項、第二十二條、第四十三條第一項、第四十三條之一第二項、第四十四條第一項至第三項、第六十條第一項、第六十二條第一項、第九十三條、第九十六條至第九十八條、第一百十六條、第一百二十條、第一百五十七條之一第一項或第一百六十條之規定者，處二年以下有期徒刑、拘役或科或併科十五萬元以下罰金。
+
+> 釋：一、配合第四十三條、第四十四條、第六十二條之修正，修正本條所引起各條條文。又本法第六十七條並未分項，爰將本條所引「第九十七條第二項」修正為「第九十七條」。二、增列第十八條第一項暨配合增訂第四十三條之一、第一百五十七條之一，增列第四十三條之一第二項、第一百五十七條之一第一項之處罰。三、目前經濟情況已有變更，原定數額顯有偏低，爰將罰金上限提高為十五萬元。
+
+* 176 （刪除）
+
+> 釋：一、第七十四條及第八十四條均屬行政上消極防弊規定，無處刑罰之必要，宜改為行政罰。二、為符合刑罰條文在前，行政罰條文在後之體例，本條移列為第一百七十七條之一，本條刪除。
+
+* 177 有左列情事之一者，處一年以下有期徒刑、拘役或科或併科十萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十一條、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百二十八條、第一百五十條或第一百六十五條之規定者。二、違反主管機關依第六十一條所為之規定者。三、違反主管機關其他依本法所為禁止、停止或限制之命令者。
+
+> 釋：一、序文增列「或併科」，並將罰金上限提高為十萬元，理由同第一百七十一條說明二。二、將第一款所列之第五十八條、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項及第一百四十七條移列於第一百七十八條中改處行政罰。三、將第二款、第三款之證券有關機構應作為而不作為之處罰移列於第一百七十八條中改處行政罰。四、第四款移列為第二款，並配合第六十一條之修正，酌作文字修正。五、第五款移列為第三款。
+
+* 177.1 違反第七十四條或第八十四條之規定者，處相當於所取得有價證券價金額以下之罰鍰。但不得少於二萬元。
+
+> 釋：一、本條係由第一百七十六條改列，並將刑罰修正為行政罰。二、參照食品衛生管理法、銀行法等規定，增設罰鍰下限。
+
+* 178 有左列情事之一者，處二萬元以上十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之一、第三十六條第四項、第四十三條之一第一項、第五十八條、第六十九條第一項、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條或第一百五十九條之規定者。二、發行人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，逾期不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不為製作、申報、公告、備置或保存者。四、違反主管機關依第二十六條第二項所定之公開發行公司董事、監察人股權成數及查核實施規則之規定者。有前項第二款至第四款規定之情事，經主管機關科處罰鍰，並責令限期辦理；逾期仍不辦理者，得繼續限期令其辦理，並按次連續各處四萬元以上二十萬元以下罰鍰，至辦理為止。
+
+> 釋：一、於第一款增列違反第二十二條之二第一項、第二項轉讓股權、第二十五條第一項、第二項、第四項股權申報之規定者暨違反第二十六條之一、第四十三條之一第一項，亦處本條之罰鍰，並配合第三十六條修正所引條文。二、將現行第一百七十七條第二款、第三款之證券有關機構應作為而不作為之處罰，移列為本條第一項第二款、第三款，由刑罰改處行政罰，並將第二款之「抗不提出」修正為「逾期不提出」，以資明確，避免行為人得藉故拖延。另增列第十八條所定之事業。三、第四款新增。為有效執行發行公司全體董事、監察人股權持股不足須補足或改選等之管理。四、第二項新增。參照稅捐稽徵法第四十五條、公司法第一百九十五條等立法例增訂第二項，對違反第一項第二款至第四款之規定者，得連續處罰直至辦理為止之規定，以加強管理。
 
 * 179 法人違反本法之規定者，依本章各條之規定處罰其為行為之負責人。
 
@@ -386,7 +502,13 @@
 
 * 181 本法施行前已依證券商管理辦法公開發行之公司股票或公司債券，視同依本法公開發行。
 
-* 182 本法施行前已獲得特許或許可之證券商及證券交易所，其設立事項與本法之規定有不符者，應於本法施行後三個月內，依本法之規定予以補正，逾期不補正者，由主管機關撤銷其特許或許可。前項補正辦法，由主管機關以命令定之。
+* 182 （刪除）
+
+> 釋：本法自五十七年四月三十日公布施行，本條所定補正期間早已屆滿已無保留之必要，爰予刪除。
+
+* 182.1 本法施行細則，由財政部定之。
+
+> 釋：一、本條新增。二、為補充本法之不足及避免掛漏，有訂定施行細則之必要。
 
 * 183 本法自公布日施行。
 
